--- a/alignak_checks_glpi/etc/arbiter/packs/glpi/commands.cfg
+++ b/alignak_checks_glpi/etc/arbiter/packs/glpi/commands.cfg
@@ -1,12 +1,8 @@
 # -----------------------------------------------------------------
 # Default ES commands
 # -----------------------------------------------------------------
+
 define command {
-    command_name    check_elasticsearch
-    command_line    $LIBEXEC$/check_elasticsearch -H $HOSTADDRESS$ -P $HOSTPORT$
-}
-# Check with authentication
-define command {
-    command_name    check_elasticsearch_auth
-    command_line    $LIBEXEC$/check_elasticsearch -H $HOSTADDRESS$ -P $HOSTPORT$ -s -u $_HOSTUSERNAME$ -p $_HOSTPASSWORD$
+    command_name    check_glpi
+    command_line    $HTTP_PLUGINS_DIR$/check_http -H $HOSTADDRESS$
 }
