--- a/alignak_checks_glpi/etc/arbiter/packs/glpi/templates.cfg
+++ b/alignak_checks_glpi/etc/arbiter/packs/glpi/templates.cfg
@@ -28,22 +28,10 @@ define service {
     aggregation         glpi
     servicegroups       glpi
 }
-define service {
-    name                Check status
-    register            0
 
-    check_command       check_elasticsearch
-
-    aggregation         glpi
-    servicegroups       glpi
-}
-define service {
-    name                Check-status-auth
-    alias               Check status (authenticated)
-    register            0
-
-    check_command       check_elasticsearch_auth
-
-    aggregation         glpi
-    servicegroups       glpi
+define service{
+service_description     Checkglpi
+register                0
+host_name               glpi
+check_commmand          check_glpi
 }
