--- a/alignak_checks_glpi/etc/arbiter/packs/glpi/templates.cfg
+++ b/alignak_checks_glpi/etc/arbiter/packs/glpi/templates.cfg
@@ -5,6 +5,8 @@ define host {
     register            0
 
     hostgroups          glpi
+
+    _GLPI_PORT          80
 }
 
 define host {
@@ -19,19 +21,40 @@ define host {
 }
 
 define service {
-    name                Check alive
+    name                glpi-service
+    use                 generic-service
     register            0
-
-    check_command       check_tcp
-    _CHECKED_PORT       80
 
     aggregation         glpi
     servicegroups       glpi
 }
 
-define service{
-service_description     Checkglpi
-register                0
-host_name               glpi
-check_commmand          check_glpi
+
+# Glpi services
+# ------------------------------------
+define service {
+    service_description     check-glpi-tcp-alive
+    use                     glpi-service
+    register                0
+    host_name               glpi
+
+    check_command           check_glpi_alive_tcp
+}
+define service {
+    service_description     check-glpi-http-alive
+    use                     glpi-service
+    register                0
+    host_name               glpi
+
+    service_dependencies    ,check-glpi-tcp-alive
+    check_command           check_glpi_alive_http
+}
+define service {
+    service_description     check-glpi-status
+    use                     glpi-service
+    register                0
+    host_name               glpi
+
+    service_dependencies    ,check-glpi-http-alive
+    check_command           check_glpi_status
 }
